--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["dalmation", "favoriting", "typecheck"]
+  "cSpell.words": [
+    "dalmation",
+    "favorited",
+    "favoriting",
+    "favs",
+    "typecheck",
+    "unfavorited"
+  ]
 }
